--- a/src/pages/404.html
+++ b/src/pages/404.html
@@ -38,16 +38,10 @@
     </style>
   </head>
   <body>
-    <h1>Hello Node</h1>
-    <p>
-      This is after following
-      <a href="https://www.digitalocean.com/" target="_blank">Digital Ocean</a
-      >'s
-      <a
-        href="https://www.digitalocean.com/community/tutorials/how-to-create-a-web-server-in-node-js-with-the-http-module"
-        target="_blank"
-        >tutorial</a
-      >
+    <h1>404!</h1>
+    <p style="text-align: center">
+      <b>This URL doesn't exist</b>
+      consider going back <br /><a href="/">home</a>
     </p>
   </body>
 </html>
